service icon alignment fix

--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -26,6 +26,10 @@
         z-index: 1;
         margin: 0;
       }
+
+      &__icon {
+        align-self: flex-start;
+      }
     }
 
     &__content {
